src/test/resources/refCompilerOutput/invalid/semanticErr/while/falsErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:8 -- Variable fals is not defined in this scope
